feat: separate htmx partials into separate routes
* json responses
